<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_start_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tn.com.hitechart.eds.Activities.Users.GestionTaches.StartTask"
    tools:showIn="@layout/activity_start_task">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llMain"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblClient"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="top"
                            android:text="Client:"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvClient"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="BIAT"
                            android:textSize="20sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblNemDoss"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="top"
                            android:text="N°Dossier:"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvNumDoss"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="R5458"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblAct"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="top"
                            android:text="Activitee:"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvAct"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="Labo"
                            android:textSize="20sp" />
                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|right"
                        android:text="00:00:00"
                        android:textColor="@color/colorAccent"
                        android:textSize="25dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/colorPrimaryDark" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="bottom|right">

                        <Button
                            android:id="@+id/btnstart"
                            android:layout_width="50dp"
                            android:layout_height="45dp"
                            android:layout_alignParentBottom="true"
                            android:text="Start"
                            android:textSize="8sp"
                            android:visibility="invisible" />

                        <Button
                            android:id="@+id/btnstop"
                            android:layout_width="150dp"
                            android:layout_height="45dp"

                            android:layout_alignParentBottom="true"
                            android:layout_toRightOf="@+id/btnstart"
                            android:text="@string/txtbtnarreter"
                            android:textSize="@dimen/textsizebtnstarttask" />

                        <Button
                            android:id="@+id/btnpause"
                            android:layout_width="150dp"
                            android:layout_height="45dp"
                            android:layout_alignParentBottom="true"
                            android:layout_toRightOf="@+id/btnstop"
                            android:text="@string/txtbtnsuspendre"
                            android:textSize="@dimen/textsizebtnstarttask" />


                    </RelativeLayout>


                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/sprtv"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/llMain"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <!-- ACHATS  -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Achat:"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <!-- LBL ACHAT -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text=""
                                android:textColor="@color/colorPrimary" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:text="Désign."
                                android:textColor="@color/colorPrimary" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="M.TTC"
                                android:textColor="@color/colorPrimary" />

                        </LinearLayout>
                        <!-- END LBL ACHAT -->
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:visibility="invisible"
                                android:id="@+id/tvemptylistachat"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:text="@string/tvEmptyListAchat" />

                            <ListView
                                android:id="@+id/achatList"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent" />

                        </RelativeLayout>
                    </LinearLayout>

                </LinearLayout>
                <!-- END ACHATS  -->
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorPrimary" />
                <!-- COMPOSANTS  -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Composants:"
                        android:textSize="20sp" />
                    <!-- LBL COMPOSAANT -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text=""
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="Désign."
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="QTE."
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>
                    <!-- END LBL ACHAT -->
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <TextView
                            android:visibility="invisible"
                            android:id="@+id/tvemptylistcomp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/tvEmptyListComp" />

                        <ListView
                            android:id="@+id/compList"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" />
                    </RelativeLayout>
                </LinearLayout>
                <!-- END COMPOSANTS  -->

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorPrimary" />
                <!-- MESSGES  -->

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbladdcomment"
                        android:textSize="20sp" />
                    <!-- LBL MSG -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text=""
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="Désign."
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>
                    <!-- END LBL MSG -->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:visibility="invisible"
                            android:id="@+id/tvemptylistmsg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/tvEmptyListmsg" />

                        <ListView
                            android:id="@+id/msgList"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" />
                    </RelativeLayout>
                </LinearLayout>
                <!-- END MESSAGES -->


            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
